--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zuid-Drecht</title>
 </head>
-<body style="background-color: #dddddd">
+<body style="background-color: #DEDEDE; font-family: RijksoverheidSans, Helvetica, Arial, sans-serif">
     <div style="text-align: center">
         <img src="/logo.png" alt="logo" style="margin-top: 50px; width: 350px">
         <p style="font-size: 1.5rem">
